xml regtest refactor - moved test files to folder TestFiles; and added ASTM_CCR_V1.xsd SampleCCR.ccr and tried validating (so far no luck but more to debug)

--- a/Tests/34/Makefile
+++ b/Tests/34/Makefile
@@ -9,16 +9,22 @@ include $(StroikaRoot)/Tests/Makefile-Test-Template.mk
 
 $(ObjDir): $(SrcDir)
 
+$(ObjDir)ASTM_CCR_V1.xsd.embed:
+	xxd -i TestFiles/ASTM_CCR_V1.xsd $@
+
+$(ObjDir)SampleCCR.ccr.embed:
+	xxd -i TestFiles/SampleCCR.ccr $@
+
 $(ObjDir)ReferenceContent-2012-03.xsd.embed:
-	xxd -i ReferenceContent-2012-03.xsd $@
+	xxd -i TestFiles/ReferenceContent-2012-03.xsd $@
 
 $(ObjDir)HealthFrameWorks_v3.xml.embed:
-	xxd -i HealthFrameWorks_v3.xml $@
+	xxd -i TestFiles/HealthFrameWorks_v3.xml $@
 
 $(ObjDir)personal.xml.embed:
-	xxd -i personal.xml $@
+	xxd -i TestFiles/personal.xml $@
 
 $(ObjDir)personal.xsd.embed:
-	xxd -i personal.xsd $@
+	xxd -i TestFiles/personal.xsd $@
 
-$(ObjDir)Test${OBJ_SUFFIX}:	$(ObjDir)personal.xml.embed  $(ObjDir)personal.xsd.embed $(ObjDir)HealthFrameWorks_v3.xml.embed $(ObjDir)ReferenceContent-2012-03.xsd.embed
+$(ObjDir)Test${OBJ_SUFFIX}:	$(ObjDir)personal.xml.embed $(ObjDir)personal.xsd.embed $(ObjDir)HealthFrameWorks_v3.xml.embed $(ObjDir)ReferenceContent-2012-03.xsd.embed $(ObjDir)ASTM_CCR_V1.xsd.embed $(ObjDir)SampleCCR.ccr.embed
