patch Xerces ubsan issue

--- a/ThirdPartyComponents/Xerces/Makefile
+++ b/ThirdPartyComponents/Xerces/Makefile
@@ -191,6 +191,7 @@ endif
 		patch -p0 $@/src/xercesc/internal/ElemStack.cpp Patches/SilenceSanitizerWarningAboutMemcpyNullPtr.PATCH >> $@/PATCHING.OUT;\
 		patch -p0 $@/tests/src/Char16Test/Char16Test.cpp Patches/Char16Test_IOSTREAMCHANGE.PATCH >> $@/PATCHING.OUT;\
 		patch -p0 $@/src/xercesc/validators/schema/NamespaceScope.cpp Patches/SilenceSanitizerWarningAboutMemcpyNullPtr2.PATCH >> $@/PATCHING.OUT;\
+		patch -p0 $@/src/xercesc/util/XMLString.hpp Patches/AvoidMemMoveOfZero.patch >> $@/PATCHING.OUT;\
 	fi
 
 
