--- a/ThirdPartyComponents/Xerces/Makefile
+++ b/ThirdPartyComponents/Xerces/Makefile
@@ -24,10 +24,17 @@ endif
 
 QUICK_BUILD ?= 1
 
-VERSION=3.2.4
+VERSION=3.2.5
+#VERSION=3.2.4
 #VERSION=3.2.3
 #VERSION=3.2.2
 ifeq (Unix,$(ProjectPlatformSubdir))
+ifeq ($(VERSION), 3.2.5)
+# This version of xerces requires more recent copy of cmake
+ifeq ($(shell $(StroikaRoot)ScriptsLib/VersionCompare `cmake --version | awk '{print $$3}' | awk 'FNR == 1'` 3.12; echo $$?), 2)
+VERSION=3.2.3
+endif
+endif
 ifeq ($(VERSION), 3.2.4)
 # This version of xerces requires more recent copy of cmake
 ifeq ($(shell $(StroikaRoot)ScriptsLib/VersionCompare `cmake --version | awk '{print $$3}' | awk 'FNR == 1'` 3.12; echo $$?), 2)
