--- a/ScriptsLib/Shared/Skel-Templates/Makefile
+++ b/ScriptsLib/Shared/Skel-Templates/Makefile
@@ -144,7 +144,7 @@ update-submodules:
 
 latest-submodules:
 ifeq ($(BRANCH),)
-	(cd $(StroikaRoot) && git checkout V2.1-Release && git pull)
+	(cd $(StroikaRoot) && git checkout v3-Release && git pull)
 else
 	(cd $(StroikaRoot) && git checkout $(BRANCH) && git pull)
 endif
