use VS_16_11_33 and VS_17_8_5 in docker containers

--- a/DockerBuildContainers/Makefile
+++ b/DockerBuildContainers/Makefile
@@ -25,8 +25,8 @@ ifneq ($(findstring $(DETECTED_HOST_OS),MSYS-Cygwin),)
 # to build this you may need  --storage-opts "size 100GB", but that currently doesn't work with build, so set
 # in docker windows configuration settings (can get from docker gui - settings/Docker Engine)
 # Build with -m 4GB cuz default of 1GB pages alot
-#EXTRA_DOCKER_BUILD_ARGS_= --network "Default Switch" 
-EXTRA_DOCKER_BUILD_ARGS_=
+EXTRA_DOCKER_BUILD_ARGS_= --network "Default Switch" 
+#EXTRA_DOCKER_BUILD_ARGS_=
 endif
 
 
