--- a/ThirdPartyComponents/boost/Makefile
+++ b/ThirdPartyComponents/boost/Makefile
@@ -247,6 +247,16 @@ B2_CONFIGURATION_ARGS += variant=debug
 endif
 
 
+# At least fails on build-n-test-Linux (Linux, ubuntu-22.04-clang++-15-debug-libc++-c++23, clang++-15, ubuntu-latest,...
+# and build-n-test-MacOS (MacOS, MacOS-13-XCode-14.3-Debug, macos-13, 14.3, Debug, --apply-default-debu...
+#              --LGP 2023-12-15
+ifeq ($(VERSION),1_84_0)
+ifeq (clang,$(findstring clang,$(CXX)))
+B2_CONFIGURATION_ARGS +=       --without-cobalt
+endif
+endif
+
+
 ### @todo - redo this using new ADDRESS_MODEL field in CONFIGURE (JAM) file
 ### MAYBE can do soemthing like toolset=${TOOLSET_NAME}-$(ARCH) change; but didn't appear to work
 ifeq (VisualStudio,$(findstring VisualStudio,$(ProjectPlatformSubdir)))
