--- a/.github/workflows/build-N-test-v2.1-Dev.yml
+++ b/.github/workflows/build-N-test-v2.1-Dev.yml
@@ -489,11 +489,11 @@ jobs:
     - name: Install tools required to build Stroika
       run: |
         sudo apt-get install -y libtool-bin pkg-config cmake automake autoconf libtool-bin libasan5 libubsan1
-        sudo apt-get install -y g++-10
+        sudo apt-get install -y g++
 
     - name: Configure
       run: |
-        ./configure Release --compiler-driver g++-10 --cppstd-version c++20 --apply-default-release-flags --lto disable
+        ./configure Release --compiler-driver g++ --cppstd-version c++20 --apply-default-release-flags --lto disable
         cat ConfigurationFiles/Release.xml
 
     # Break out third-party-components to do clean so we dont run out of disk space, and break out TPC AND library
