tweak Skel-gen output

--- a/ScriptsLib/Shared/Skel-Templates/Makefile
+++ b/ScriptsLib/Shared/Skel-Templates/Makefile
@@ -103,6 +103,7 @@ ifneq ($(CONFIGURATION),)
 endif
 	@rm -rf Builds/ ConfigurationFiles/ IntermediateFiles/
 	@$(MAKE) --no-print-directory clobber MAKE_INDENT_LEVEL=$$(($(MAKE_INDENT_LEVEL)+1))
+	-@$(MAKE) --no-print-directory --directory $(StroikaRoot) --silent $@ MAKE_INDENT_LEVEL=$$(($(MAKE_INDENT_LEVEL)+1))
 
 clean clobber:
 ifeq ($(CONFIGURATION),)
