--- a/.github/workflows/build-N-test-v2.1-Release.yml
+++ b/.github/workflows/build-N-test-v2.1-Release.yml
@@ -491,9 +491,10 @@ jobs:
         sudo apt-get install -y libtool-bin pkg-config cmake automake autoconf libtool-bin libasan5 libubsan1
         sudo apt-get install -y g++-10
 
+    # No boost since g++-10 doesn't build current boost version successfully --LGP 2024-02-04
     - name: Configure
       run: |
-        ./configure Release --compiler-driver g++-10 --cppstd-version c++20 --apply-default-release-flags --lto disable
+        ./configure Release --compiler-driver g++-10 --cppstd-version c++20 --apply-default-release-flags --lto disable --boost no
         cat ConfigurationFiles/Release.xml
 
     # Break out third-party-components to do clean so we dont run out of disk space, and break out TPC AND library
