download strawberryperl from github now (at least experiment) and newer version - 5.38.2.2

--- a/ThirdPartyComponents/StrawberryPerl/Makefile
+++ b/ThirdPartyComponents/StrawberryPerl/Makefile
@@ -1,6 +1,6 @@
 #
-#	some perl besides cygwin/msys required to build openssl. Tried ActivePerl for a while but too buggy/
-#	PITA to install
+#	This is only used for building openssl, because the perl that comes with msys/cygwin somehow doesn't
+#	work for building openssl. Tried ActivePerl for a while but too buggy/PITA to install
 #
 #	To run STRAWBERRYPERL (roughly):
 #		PATH=$(StroikaRoot)ThirdPartyComponents/StrawberryPerl/CURRENT/perl/bin:$PATH		OR
@@ -10,17 +10,20 @@ StroikaRoot=$(abspath ../..)/
 
 include $(StroikaRoot)ScriptsLib/Makefile-Common.mk
 
-VERSION=5.32.1.1
 
 #
 # CHECK FOR UPDATED VERSIONS https://strawberryperl.com/releases.html
+#	MAYBE BETTER https://github.com/StrawberryPerl/Perl-Dist-Strawberry/releases
 #
-PERL_VERSION_=5.32.1.1
+PERL_VERSION_=5.38.2.2
+#PERL_VERSION_=5.32.1.1
 
 ZIPPED_SOURCES_FILE_=../Origs-Cache/strawberry-perl-${PERL_VERSION_}-64bit-portable.zip
 
 FETCHURLS_=
-FETCHURLS_+=https://strawberryperl.com/download/${PERL_VERSION_}/strawberry-perl-${PERL_VERSION_}-64bit-portable.zip
+
+FETCHURLS_+=https://github.com/StrawberryPerl/Perl-Dist-Strawberry/releases/download/SP_53822_64bit/strawberry-perl-${PERL_VERSION_}-64bit-portable.zip
+#FETCHURLS_+=https://strawberryperl.com/download/${PERL_VERSION_}/strawberry-perl-${PERL_VERSION_}-64bit-portable.zip
 
 
 ${ZIPPED_SOURCES_FILE_}:
@@ -34,7 +37,7 @@ ORIGs CURRENT:	$(ZIPPED_SOURCES_FILE_)
 
 
 all:	
-	@$(StroikaRoot)ScriptsLib/PrintProgressLine $(MAKE_INDENT_LEVEL) "Stroika/ThirdPartyComponents/ActivePerl Build $(VERSION):"
+	@$(StroikaRoot)ScriptsLib/PrintProgressLine $(MAKE_INDENT_LEVEL) "Stroika/ThirdPartyComponents/ActivePerl Build $(PERL_VERSION_):"
 	@$(MAKE) --silent CURRENT
 
 
