--- a/Samples/AppSettings/Projects/VisualStudio.Net-2022/ApPSettings.vcxproj.filters
+++ b/Samples/AppSettings/Projects/VisualStudio.Net-2022/ApPSettings.vcxproj.filters
@@ -21,11 +21,31 @@
     <ClCompile Include="..\..\Sources\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Sources\AppConfiguration.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\Sources\MoreConfiguration.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\Makefile" />
+    <None Include="..\..\Sources\AppConfiguration.inl">
+      <Filter>Header Files</Filter>
+    </None>
+    <None Include="..\..\Sources\MoreConfiguration.inl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="..\..\ReadMe.md" />
+    <Text Include="..\..\ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\Sources\AppConfiguration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Sources\MoreConfiguration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
