cleanup docker DOCKER_NETWORK hack/workaround in docker build makefile

--- a/DockerBuildContainers/Makefile
+++ b/DockerBuildContainers/Makefile
@@ -19,14 +19,23 @@ help:
 	@echo "And first thing when you run docker image, cat /Getting-Started-With-Stroika.md"
 
 
-ifneq ($(findstring $(DETECTED_HOST_OS),MSYS-Cygwin),)
-EXTRA_DOCKER_BUILD_ARGS_=
 #
 # Due to https://stroika.atlassian.net/browse/STK-742 - you may see the error message building "Invoke-WebRequest : The remote name could not be resolved"
-#	- add   --network "Default Switch" 
 #
-#EXTRA_DOCKER_BUILD_ARGS_= --network "Default Switch" 
+#		replace
+#			make build-images
+#		with
+#			DOCKER_NETWORK="Default Switch" make build-iamges
 #
+#	Cannot find any way to change the default network for docker build, but it appears you can override
+#	it with --network XXX and that that XXX defaults to nat (not documented I can find, but empirically).
+#
+DOCKER_NETWORK?=nat
+
+ifneq ($(findstring $(DETECTED_HOST_OS),MSYS-Cygwin),)
+EXTRA_DOCKER_BUILD_ARGS_=
+EXTRA_DOCKER_BUILD_ARGS_ +=	--network "${DOCKER_NETWORK}"
+
 # to build this you may need  --storage-opts "size 100GB", but that currently doesn't work with build, so set
 # in docker windows configuration settings (can get from docker gui - settings/Docker Engine)
 # Build with -m 4GB cuz default of 1GB pages alot
