--- a/.github/workflows/build-N-test.yml
+++ b/.github/workflows/build-N-test.yml
@@ -335,6 +335,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Install tools required to build Stroika
       run: |
+        sudo apt-get update -y
         sudo apt-get install -y libtool-bin pkg-config cmake automake autoconf libtool-bin
         sudo apt-get install -y g++
     - name: Configure
